--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button>Sign Up</button>
             </div>
             <div class="image">
-                <img src="" alt="This is a placeholder for an image"></div>
+                <img src="style.css" alt="This is a placeholder for an image"></div>
         </div>
     </div>
     <div class="random">
