--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button>Sign Up</button>
             </div>
             <div class="image">
-                <img src="style.css" alt="This is a placeholder for an image"></div>
+                <img src="./image/image.jpg" alt="This is a placeholder for an image"></div>
         </div>
     </div>
     <div class="random">
@@ -53,8 +53,8 @@
         </div>
     </div>
     <div class="quote">
-        This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up
-        space, or maybe people will actually read it. Who knows? All I knows is that it looks nice.
+        <article>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up
+            space, or maybe people will actually read it. Who knows? All I knows is that it looks nice.</article>
         <div class="author">-Thor, God of Thunder</div>
     </div>
     <div class="call-to-action"></div>
