Editing Quote section and deployement on Github

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         </div>
     </div>
     <div class="quote">
-        <article>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up
-            space, or maybe people will actually read it. Who knows? All I knows is that it looks nice.</article>
+        This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up
+            space, or maybe people will actually read it. Who knows? All I knows is that it looks nice.
         <div class="author">-Thor, God of Thunder</div>
     </div>
     <div class="call-to-action"></div>
