--- a/index.html
+++ b/index.html
@@ -53,11 +53,23 @@
         </div>
     </div>
     <div class="quote">
-        This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up
+        <div class="article">
+            This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up
             space, or maybe people will actually read it. Who knows? All I knows is that it looks nice.
+        </div>
         <div class="author">-Thor, God of Thunder</div>
     </div>
-    <div class="call-to-action"></div>
+    <div class="call-to-action">
+        <div class="callbox">
+            <div class="left-side">
+                <div class="call-text">Call to action ! It's time!</div>
+                <div class="call-two-text">Sign up for our product by clicking that button right over there !</div>
+            </div>
+            <div class="button">
+                <button id="call-button">Sign Up</button>
+            </div>
+        </div>
+    </div>
     <div class="footer">Copyright The Odin Project 2021</div>
 </body>
 </html>
